--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,8 +75,9 @@ endif ()
 ########################################################################
 # Add Check for sanitizers.
 ########################################################################
-
-include (CheckSanitizers)
+if (NOT "${CMAKE_GENERATOR}" MATCHES "Xcode")
+	include (CheckSanitizers)
+endif ()
 
 
 ########################################################################
